--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -31,15 +31,15 @@ body {
     background-size: cover;
 
     &:nth-child(1) {
-      background-image: url("https://source.unsplash.com/abkEAOjnY0s");
+      background-image: url("../images/cristian-escobar-abkEAOjnY0s-unsplash.jpg?as=webp");
     }
 
     &:nth-child(2) {
-      background-image: url("https://source.unsplash.com/5IHz5WhosQE");
+      background-image: url("../images/chris-lawton-5IHz5WhosQE-unsplash.jpg?as=webp");
     }
 
     &:nth-child(3) {
-      background-image: url("https://source.unsplash.com/Qy-CBKUg_X8");
+      background-image: url("../images/aaron-burden-WS89mmrCU8U-unsplash.jpg?as=webp");
     }
   }
 }
